Add property configuration examples

--- a/quarkus-mp-config-demo/src/main/resources/META-INF/resources/index.html
+++ b/quarkus-mp-config-demo/src/main/resources/META-INF/resources/index.html
@@ -134,7 +134,7 @@
                 <div class="example-code">
             <h3>RESTEasy JSON serialisation using Jackson</h3>
             <p>This example demonstrate RESTEasy JSON serialisation by letting you list, add and remove quark types from a list. Quarked!</p>
-            <p><code>@Path: <a href="/resteasy-jackson/quarks/" class="path-link" target="_blank">/resteasy-jackson/quarks/</a></code></p>
+            <p><code>@Path: <a href="/message" class="path-link" target="_blank">/message</a></code></p>
             <p><a href="https://quarkus.io/guides/rest-json#creating-your-first-json-rest-service" class="guide-link" target="_blank">Related guide section...</a></p>
         </div>
 
